# BlogAPI_FAST_API

./: .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
api/: exceptions.py  middlewares.py
api/routes/: auth.py  comments.py  likes.py  posts.py
config/: logging_config.py  settings.py
db/: database.py
db/migrations/: env.py
db/migrations/versions/: 0af29d128110_added_nullable_false_in_is_active_field.py  126699719417_create_users_and_posts_table.py  b76a4f1ae24e_added_is_active_field.py  e4894ffda6b5_added_models.py
models/: comment.py  like.py  post.py  user.py
schemas/: comment.py  like.py  post.py  token.py  user.py
services/: auth.py  comment.py  like.py  post.py
